@@ -71,6 +71,16 @@
         <div id="news">
 	    <h2 class="">News</h2>
 
+	    <h3>August 18, 2008</h3>
+   	      <b>Unstable</b> version 0.11.2 released!  New in this release:
+   	      <ul>
+   	        <li>Better linking in the Export to HTML add-in.</li>
+   	        <li>Fixes to spell-checking.</li>
+   	        <li>Various fixes for building Tomboy.</li>
+   	        <li>And <a href="http://svn.gnome.org/viewcvs/tomboy/tags/TOMBOY_0_11_2/NEWS?view=markup">more</a></li>
+              </ul>
+   	      <a href="download.html">Download it</a>
+
 	    <h3>August 4, 2008</h3>
    	      <b>Unstable</b> version 0.11.1 released!  New in this release:
    	      <ul>
