@@ -1,3 +1,8 @@
+2008-08-18  Sandy Armstrong  <sanfordarmstrong@gmail.com>
+
+	* index.html: Updated for 0.11.2 release.
+	* download.html: Ditto.
+
 2008-08-04  Sandy Armstrong  <sanfordarmstrong@gmail.com>
 
 	* index.html: Updated for 0.11.1 release, removed old cruft.
